# llmparser

./: .gitignore  LICENSE  README.md  evaluate.py  pyproject.toml  scrapy.cfg  sonar-project.properties
.github/workflows/: ci.yml  sonar_scan.yml
blog_scraper/: __init__.py  __main__.py  extensions.py  items.py  middlewares.py  pipelines.py  query.py  settings.py
blog_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
blog_scraper/extractors/: __init__.py  adaptive.py  blocks.py  feed.py  heuristics.py  main_content.py  markdown.py  metadata.py
docs/: architecture.md  heuristics.md  schema.md
llmparser/: __init__.py  __main__.py  auth.py  extensions.py  items.py  language.py  middlewares.py  parser.py  pipelines.py  playwright_pool.py  plugins.py  profiles.py  proxy.py  query.py  rag.py  rate_limit.py  settings.py
llmparser/extractors/: __init__.py  adaptive.py  block_detection.py  blocks.py  feed.py  heuristics.py  main_content.py  markdown.py  metadata.py  urlnorm.py
spiders/: __init__.py  blog_spider.py
tests/: __init__.py  conftest.py  test_adaptive.py  test_block_detection.py  test_extractors.py  test_parser.py  test_proxy.py  test_query.py  test_urlnorm.py
tests/fixtures/: article.html  cookie_wall.html  jsapp.html  listing.html  minimal_article.html  spa_no_framework.html  wpconsent_template.html
