[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blog-scraper"
version = "0.1.0"
description = "Production-quality blog scraper: deterministic extraction, no LLMs, minimal infra"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["scrapy", "web-scraping", "blog", "content-extraction"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = [
  "scrapy>=2.11",
  "scrapy-playwright>=0.0.34",
  "readability-lxml>=0.8.1",
  "trafilatura>=1.8",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "dateparser>=1.2",
  "pydantic>=2.5",
  "markdownify>=0.13",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.0",
]

[project.scripts]
blog-scraper = "blog_scraper.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["blog_scraper*", "spiders*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
# Scrapy, readability, trafilatura don't ship py.typed stubs
reportMissingModuleSource = "none"
