[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmparser"
version = "0.1.0"
description = "Extract structured, LLM-ready content from any website — adaptive engine, no LLMs required"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "LLMParser Contributors" },
]
keywords = [
  "llm", "rag", "web-scraping", "content-extraction", "scrapy",
  "playwright", "markdown", "html-parser", "web-parser",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Markup :: HTML",
  "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
  "scrapy>=2.11",
  "scrapy-playwright>=0.0.34",
  "readability-lxml>=0.8.1",
  "trafilatura>=1.8",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "dateparser>=1.2",
  "pydantic>=2.5",
  "markdownify>=0.13",
  "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/rexdivakar/llmparser"
Repository = "https://github.com/rexdivakar/llmparser"
Documentation = "https://github.com/rexdivakar/llmparser/tree/main/docs"
"Bug Tracker" = "https://github.com/rexdivakar/llmparser/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.0",
]

[project.scripts]
llmparser = "llmparser.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["llmparser*", "spiders*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
# Scrapy, readability, trafilatura don't ship py.typed stubs
reportMissingModuleSource = "none"
